tests/baselines/reference/genericTypeAssertions5.errors.txt
==== tests/cases/compiler/genericTypeAssertions5.ts (5 errors) ====
    interface A {
        foo(): string;
    }
    
    interface B extends A {
        bar(): number;
    }
    
    interface C extends A {
        baz(): number;
    }
    
    var a: A;
    var b: B;
    var c: C;
    
    function foo2<T extends A>(x: T) {
        var y = x;
        y = a; // error: cannot convert A to T
        ~
!!! genericTypeAssertions5.ts(19,5): error TS2011: Cannot convert 'A' to 'T'.
        y = b; // error: cannot convert B to T
        ~
!!! genericTypeAssertions5.ts(20,5): error TS2011: Cannot convert 'B' to 'T'.
        y = c; // error: cannot convert C to T
        ~
!!! genericTypeAssertions5.ts(21,5): error TS2011: Cannot convert 'C' to 'T'.
        y = <T>a;
        y = <T>b; // error: cannot convert B to T
            ~~~~
!!! genericTypeAssertions5.ts(23,9): error TS2012: Cannot convert 'B' to 'T':
!!! 	Type 'A' is missing property 'bar' from type 'B'.
        y = <T>c; // error: cannot convert C to T
            ~~~~
!!! genericTypeAssertions5.ts(24,9): error TS2012: Cannot convert 'C' to 'T':
!!! 	Type 'A' is missing property 'baz' from type 'C'.
    }